--- a/a-house-divided.Rmd
+++ b/a-house-divided.Rmd
@@ -338,7 +338,7 @@ fig_3_df <- read_rds("data/tidy-primaries-80-20.rds")%>%
 	filter(!(pid_3=="Democrat" & (year == 2012))) %>% 
 	glimpse() 
 ```
-```{r mct-props, include=FALSE}
+```{r mct-props, include=FALSE, eval=FALSE}
 mct_prop_ns <- below_mct_ns%>% #way more measures here than are needed
   group_by(year,
   				 pid_3,
@@ -455,8 +455,8 @@ Before investigating the role played by primaries in driving intra-party attitud
 
 
 ```{r fig-1}
-fig_3_df %>% 
-	glimpse()
+
+
 ggplot(fig_3_df, aes(x = year, y = pct_50_below, color = prim_vote)) +
 	facet_wrap(vars(pid_3)) +
 #	 geom_linerange(aes(ymin = (pct_50_below - 1.96*se), ymax = (pct_50_below + 1.96*se)), position = dodge) +
@@ -471,11 +471,11 @@ scale_color_manual(values = c("Winner" = "#481567FF",
  															"Loser" = "longdash")) +
  scale_shape_manual(values = c("Winner" = 15,
   															"Loser" = 16)) +
-	scale_x_continuous(breaks = c(seq(1980, 2020, by = 4))) +
+	scale_x_continuous(breaks = c(1980, 1988, 1992, 2008, 2012, 2016, 2020)) +
 	#  scale_y_continuous(breaks = c(seq(0,25, by = 5)),
 	# 									  limits = c(0,20)) +
 	theme(legend.position = 'bottom',
-				axis.text.x = element_text(angle = 0),
+				axis.text.x = element_text(angle = 285),
 				legend.key.width = unit(.1, "npc"),
 				legend.key.height = unit(.05, "npc")) +
 	labs(x = "Year",
@@ -505,11 +505,11 @@ scale_color_manual(values = c("Winner" = "#481567FF",
  															"Loser" = "longdash")) +
  scale_shape_manual(values = c("Winner" = 15,
   															"Loser" = 16)) +
-	scale_x_continuous(breaks = c(seq(1980, 2020, by = 4))) +
+	scale_x_continuous(breaks = c(1980, 1988, 1992, 2008, 2012, 2016, 2020)) +
 	#  scale_y_continuous(breaks = c(seq(0,25, by = 5)),
 	# 									  limits = c(0,20)) +
 	theme(legend.position = 'bottom',
-				axis.text.x = element_text(angle = 0),
+				axis.text.x = element_text(angle = 285),
 				legend.key.width = unit(.1, "npc"),
 				legend.key.height = unit(.05, "npc")) +
 	labs(x = "Year",
@@ -520,6 +520,13 @@ scale_color_manual(values = c("Winner" = "#481567FF",
 			  fill = " ",
 			 title = " ",
 			 caption = "Source: ANES Timeseries Study (1980, 1988, 1992, 2008, 2012, 2016, 2020)")
+```
+
+```{r google-trends, eval = FALSE}
+# 
+# g_df <- read_csv("data/trends-primary-election.csv") %>% 
+# 	glimpse()
+
 ```
 
 
@@ -535,6 +542,17 @@ To justify the argument that shifts in in-party attitudes are substantively mean
 
 ```{r ft-difs, include = FALSE}
 
+read_rds("data/tidy-primaries-80-20.rds") %>% 
+
+	select(year,
+				 case,
+				 prim_vote_simple) %>%
+	group_by(year) %>% 
+	summarize(n()) %>% 
+				 glimpse()
+
+fig_3_df %>% 
+	glimpse()
 #First calling the bootstrapped dfs written in plots-ft-dif-strict.R
 
 
@@ -660,7 +678,7 @@ primary_tab
 ```
 
 
-```{r margins}
+```{r margins, eval=FALSE}
 
 # # not including ideology var because this  is probably just a proxy for partisanship
 # cm_3 <- c("prim_vote_simpleLoser" = "Voted for Primary Loser",
@@ -1594,7 +1612,7 @@ Referring to Figure 4, the flat slope of Democratic and Republican lines in the 
 
 The greater increase in strong partisanship among winning Democrats suggests that Obama supporters' affinity for their own party increased as a result of his primary victory. There is no such effect observed among Republicans, who become less likely to identify as strong partisans regardless of which candidate they supported in the primary. It is difficult to assess why this might be, given that data from only one election cycle is available. Perhaps Republicans' grim electoral prospects implied by the underwater approval of the Bush Administration, unpopular wars in Iraq and Afghanistan, and economic anxiety suppressed any partisan enthusiasm felt by supporters of John McCain's primary bid. It is also possible that as the Republican Party electoral coalition is more ideological than the Democrats' coalition rooted in group interest [@grossmann2016] primary outcomes affect Republicans' and Democrats' partisanship in different ways, though there is little else in my analyses that support such a conclusion.
 
-```{r cdf-sd, fig.cap="Changes in the standard deviation of in-party feeling thermometers."}
+```{r cdf-sd, eval=FALSE, fig.cap="Changes in the standard deviation of in-party feeling thermometers."}
 
 ggplot(fig_1_df, aes(x = year, y = pct_50_below, color = pid_3)) +
 	facet_wrap(vars(primary_vote_dum)) +
